# hello_icicle_auth_clients

./: .gitignore  README.md  auth-client-data.yaml  requirements.txt
icicle_rel_03_2023/CLI/TapisCL-ICICLE/: .gitignore  README.md  changelog  link.txt  pyproject.toml  requirements.txt  todo
icicle_rel_03_2023/CLI/TapisCL-ICICLE/Scripting-Examples/: Example.ipynb  README.md  cli_script.sh
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/: README.md  __main__.py  args.py  cli.py  dcli.py  decorators.py  helpers.py  schemas.py  server.py  serverRun.py  socketOpts.py  tapisObjectWrappers.py  test.json  test.py  todo.md  todo.todo
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/client/: __init__.py  cli.py  connectionInitializer.py  formatters.py  handlers.py  parsers.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/: appCommands.py  apps.py  baseCommand.py  baseWrappers.py  command.py  commandMap.py  dataFormatters.py  decorators.py  fileCommands.py  files.py  id_rsa  id_rsa.pub  podCommands.py  pods.py  query.py  serverCommands.py  systemCommands.py  systems.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/apps/: appCommandGroup.py  appCommands.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/files/: fileCommandGroup.py  fileCommands.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/query/: neo4j.py  postgres.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/servercommands/: serverCommandGroup.py  serverCommands.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/commands/systems/: systemCommandGroup.py  systemCommands.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/server/: server.py  serverConnection.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/socketopts/: schemas.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/TapisCLICICLE/utilities/: args.py  decorators.py  exceptions.py  helpers.py  killableThread.py  schemas.py  serverConnection.py  socketOpts.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/examples/: Example.ipynb  cli_script.sh
icicle_rel_03_2023/CLI/TapisCL-ICICLE/src/: __init__.py  __main__.py  stdout.txt
icicle_rel_03_2023/CLI/TapisCL-ICICLE/src/TapisCLICICLE/: __main__.py  serverRun.py  test.py  todo.md
icicle_rel_03_2023/CLI/TapisCL-ICICLE/src/TapisCLICICLE/client/: cli.py  entered_command.json  formatters.py  handlers.py  parsers.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/src/TapisCLICICLE/commands/: GlobusProxy.py  appCommands.py  args.py  authenticatorClients.py  baseCommand.py  commandMap.py  commandOpts.py  configTemplateGenerator.py  dataFormatters.py  decorators.py  entered_command.json  fileCommands.py  id_rsa  id_rsa.pub  jobCommands.py  podCommands.py  serverCommands.py  snapshotCommands.py  systemCommands.py  test.py  volumeCommands.py
icicle_rel_03_2023/CLI/TapisCL-ICICLE/tapis-config-files/: child_system.json  job-config.json  system-config.json
icicle_rel_03_2023/CLI/TapisCL-ICICLE/tests/: file_Editor_test.py  keygen_test.py  oop_silliness.py  parser.ipynb  socket_test.py  test.ipynb  test.py  test.txt
icicle_rel_03_2023/CLI/TapisCL-ICICLE/user_files/: README.md
icicle_rel_03_2023/FederatedAuth/: README.md  build.bat  pyproject.toml  tenantAuth.json
icicle_rel_03_2023/FederatedAuth/federatedTenantAuthAPI/: get.py
icicle_rel_03_2023/FederatedAuth/tests/: test.py
(+125 files in other folders)
