# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TapisCL-ICICLE"
version = "0.0.30"
description = "Provide good performance command line user interface for Tapis services hosted on HPC clusters"
readme = "README.md"
authors = [{ name = "Michael Ray", email = "ahumanbeing189@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Tapis", "CLI", "Agave", "HPC", "Tapis Pods", "TACC"]
dependencies = [
    "pydantic",
    "pyfiglet",
    "tapipy",
    "pyperclip",
    "py2neo",
    "psycopg"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/sdsc-hpc-training-org/hello_icicle_auth_clients/tree/main/icicle_rel_04_2023/CLI/TapisCL-ICICLE"

[project.entry-points."TapisCLICICLE.__main__"]
tomatoes = "TapisCLICICLE:__main__"